pool: don't use Sun-private class for Base64
The http mover RemoteHttpDataTransferProtocol_1 uses the sun.misc.BASE64Encoder class.  
This results in the compiler emitting an warning:

http://svn.dcache.org/build/job/dCache-Build/3267/console

    [javac] /scratch/hudson/wo[..]vers/RemoteHttpDataTransferProtocol_1.java:91: 
    [javac] warning: sun.misc.BASE64Encoder is Sun proprietary API and may be removed in 
    [javac] a future release
    [javac]                 String userPassEncoding = new sun.misc.BASE64Encode[...]
    [javac]                                                       ^

This patch fixes this by using the Base64-encoder included as part of dCache's source.

Patch is for trunk.

Patch: http://rb.dcache.org/r/1999/
Acked-by: Jan
Target: trunk